--- a/index.html
+++ b/index.html
@@ -1,88 +1,78 @@
-# ====== DADOS DA PÁGINA ======
-titulo = "Aprenda a se tornar um Fotógrafo Profissional"
-descricao = "Descubra como transformar sua paixão por fotografia em uma carreira de sucesso."
-botao = "Quero Começar Agora"
-
-html = f"""
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Curso de Fotografia</title>
-
+    <title>Curso de Fotografia Profissional</title>
     <style>
-        body {{
-            margin: 0;
+        body {
             font-family: Arial, sans-serif;
-            background-color: #1e1e1e;
-            color: white;
+            margin: 0;
+            background-color: #f4f4f4;
             text-align: center;
-        }}
+        }
 
-        .container {{
-            padding: 60px 20px;
-        }}
+        header {
+            background: linear-gradient(135deg, #111, #333);
+            color: white;
+            padding: 80px 20px;
+        }
 
-        h1 {{
-            font-size: 40px;
-        }}
+        h1 {
+            font-size: 42px;
+            margin-bottom: 20px;
+        }
 
-        p {{
+        p {
             font-size: 18px;
-            max-width: 600px;
-            margin: 20px auto;
-        }}
+        }
 
-        .lista {{
-            margin-top: 30px;
-        }}
-
-        .lista li {{
-            margin: 10px 0;
-        }}
-
-        .botao {{
+        .botao {
             display: inline-block;
             margin-top: 30px;
-            padding: 12px 30px;
-            font-size: 18px;
-            background-color: #ff9800;
-            color: black;
+            padding: 15px 30px;
+            background-color: #ff6600;
+            color: white;
             text-decoration: none;
-            border-radius: 5px;
-        }}
+            border-radius: 8px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
 
-        footer {{
-            margin-top: 50px;
+        .botao:hover {
+            background-color: #e65c00;
+        }
+
+        section {
+            padding: 50px 20px;
+        }
+
+        footer {
+            background-color: #222;
+            color: white;
             padding: 20px;
-            background-color: #111;
-        }}
+        }
     </style>
 </head>
-
 <body>
 
-    <div class="container">
-        <h1>{titulo}</h1>
+<header>
+    <h1>Aprenda a se tornar um Fotógrafo Profissional</h1>
+    <p>Descubra como transformar sua paixão por fotografia em uma carreira de sucesso.</p>
+    <a href="#" class="botao">Quero Começar Agora</a>
+</header>
 
-        <p>{descricao}</p>
+<section>
+    <h2>O que você vai aprender:</h2>
+    <p>✔ Como usar o modo manual da câmera</p>
+    <p>✔ Técnicas de iluminação profissional</p>
+    <p>✔ Edição básica e avançada</p>
+    <p>✔ Como conseguir seus primeiros clientes</p>
+</section>
 
-        <h2>O que você vai aprender:</h2>
-
-        <ul class="lista" style="list-style: none;">
-            <li>✔ Como usar o modo manual da câmera</li>
-            <li>✔ Técnicas de iluminação profissional</li>
-            <li>✔ Edição básica e avançada</li>
-            <li>✔ Como conseguir seus primeiros clientes</li>
-        </ul>
-
-        <a href="#" class="botao">{botao}</a>
-    </div>
-
-    <footer>
-        <p>© 2026 Curso de Fotografia Profissional</p>
-    </footer>
+<footer>
+    © 2026 Curso de Fotografia Profissional
+</footer>
 
 </body>
 </html>
-"""
+
